# asktheboard

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  conftest.py  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
asktheboard/: __init__.py  adr.py  cli.py  convene.py  decision_types.py  http_client.py  ledger.py  llm.py  model.py  roster.py
docs/: CNAME  index.html  llms-full.txt  llms.txt  robots.txt  sitemap.xml
examples/: 2026-06-jobs-report.json  2026-06-jobs-report.md  README.md  open-minute.json  open-minute.md  resolved-minute.json  resolved-minute.md  scoreboard.txt
product/: overview.md  roadmap.md
tests/: sample_minute.json  test_adr.py  test_convene.py  test_decision_types.py  test_http_client.py  test_ledger.py  test_model.py  test_roster.py
