[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "asktheboard"
version = "0.2.0"
description = "A board of expert personas whose every decision is a pre-registered, time-anchored, reality-graded bet. BYOK; the board that keeps score, before the fact."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Dan Ilushin", email = "dilushin@chu6a.dev" }]
keywords = ["llm", "decision", "calibration", "brier", "adr", "byok", "board"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.urls]
Homepage = "https://github.com/danilushin/asktheboard"
Repository = "https://github.com/danilushin/asktheboard"
Issues = "https://github.com/danilushin/asktheboard/issues"
Changelog = "https://github.com/danilushin/asktheboard/blob/main/CHANGELOG.md"

[project.scripts]
asktheboard = "asktheboard.cli:main"

[tool.setuptools.packages.find]
include = ["asktheboard*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
